fix: Fixes Property Filter wrapping on Safari (#755)

--- a/src/table/styles.scss
+++ b/src/table/styles.scss
@@ -20,8 +20,14 @@
   padding: awsui.$space-scaled-xs 0 awsui.$space-scaled-xxs;
 
   &-filtering {
-    flex: 1 1 fit-content;
+    @supports (flex-basis: fit-content) {
+      flex: 1 1 fit-content;
+    }
+    @supports not (flex-basis: fit-content) {
+      flex: 1 1 auto;
+    }
     max-width: 100%;
+    margin-right: awsui.$space-l;
   }
 
   &-align-right {
